>Introduced Microservices with basic-functionality and basic-dockerfile >added docker-compose to start all microservices, legacy frontend and db-images >added sql-init script for db-creation and user/role initialization

--- a/category/src/main/resources/application.properties
+++ b/category/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=category
+spring.datasource.url=jdbc:mysql://web-shop-db-image:3306/category
+spring.datasource.username=webshopuser
+spring.datasource.password=240b2c6d58ff2ce2f508b49f
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+server.port=8081
