--- a/product/pom.xml
+++ b/product/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>hka.vertsys</groupId>
 	<artifactId>product</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>war</packaging>
 	<name>product</name>
 	<description>Product Service</description>
