--- a/category/pom.xml
+++ b/category/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>hka.vertsys</groupId>
 	<artifactId>category</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>war</packaging>
 	<name>category</name>
 	<description>Category Service</description>
