--- a/user/pom.xml
+++ b/user/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>hka.vertsys</groupId>
 	<artifactId>user</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>war</packaging>
 	<name>user</name>
 	<description>User Service</description>
