--- a/user/src/main/resources/application.properties
+++ b/user/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=user
+
+spring.datasource.url=jdbc:mysql://web-shop-db-image:3306/user
+spring.datasource.username=webshopuser
+spring.datasource.password=240b2c6d58ff2ce2f508b49f
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+server.port=8083
