--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     build:
       context: ./legacy
       dockerfile: ./docker/Dockerfile
+    depends_on:
+      - user-microservice
     ports:
       - "8888:8080"
     networks:
@@ -16,7 +18,7 @@ services:
       context: ./legacy
       dockerfile: ./docker/DockerfileMySQL
     volumes:
-      - "./.data/db:/var/lib/mysql_7"
+      - "./.data/db:/var/lib/mysql"
       - ./legacy/sql/create_databases.sql:/docker-entrypoint-initdb.d/create_databases.sql
     environment:
       MYSQL_ROOT_PASSWORD: c8de110f37300a53a971749
