--- a/legacy/docker/DockerfileMySQL
+++ b/legacy/docker/DockerfileMySQL
@@ -2,3 +2,4 @@ FROM mysql:5.7.9
 
 COPY ./sql/create-tables.sql /docker-entrypoint-initdb.d/create-tables.sql
 COPY ./sql/initial.sql /docker-entrypoint-initdb.d/initial.sql
+COPY ./sql/create_databases.sql /docker-entrypoint-initdb.d/create_databases.sql
